@@ -15,6 +15,8 @@ ver 0.21.6 (not yet released)
 * support abstract sockets on Linux
 * Windows
   - remove the unused libwinpthread-1.dll dependency
+* Android
+  - enable SLES power saving mode
 
 ver 0.21.5 (2019/02/22)
 * protocol
